# cross-sectional-ml-nasdaq100

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_AUDIT_AND_RISK_NOTES.md  README.md  __main__.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
configs/: base.yaml
data/processed/: predictions_ens_full.parquet
docs/notes/: adaptive_overlay_dropped.md  post_audit_fixes.md  v1_changelog.md  v1_roadmap.md
experiments/v2_hyperparam_tuning/: README.md  compare_v1_v2.py  purged_kfold.py  (+1 more)
notebooks/: 01_data_etl.ipynb  02_features.ipynb  03_labeling.ipynb  04_models.ipynb  05_backtesting.ipynb  06_analysis.ipynb  07_overlay_tuning.ipynb  08_v2_tuning_postmortem.ipynb
outputs/: equity_benchmark.parquet  equity_benchmark_full.parquet  equity_benchmark_mcap10.parquet  equity_benchmark_qqq.parquet  equity_cw.parquet  equity_full.parquet  equity_full_tuned_v3.parquet  equity_model_lgbm.parquet  equity_model_lr.parquet  equity_model_rf.parquet
scripts/: _common.py  diagnose_processed_data.py  export_reporting.py  run_all.py  run_analysis.py  run_backtest.py  run_data_pipeline.py  run_features.py  run_labeling.py  run_models.py
src/: config.py
tests/: conftest.py  test_adaptive_improvements.py  test_aligned_targets.py  test_data_health_repairs.py  test_feature_partitioning.py  test_full_signal_router.py  test_lgbm_ranker_safety.py  test_logic_additional.py  test_new_modules.py  test_project.py  test_signal_fidelity_repairs.py  test_signal_improvements.py  test_treasury_fetch.py  test_v2_features.py
(+78 files in other folders)
